exercises/16_lifetimes/writeup.txt
⚠️  Compilation of exercises/16_lifetimes/lifetimes3.rs failed!, Compiler error message:

error[E0106]: missing lifetime specifier
  --> exercises/16_lifetimes/lifetimes3.rs:11:13
   |
11 |     author: &str,
   |             ^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
10 ~ struct Book<'a> {
11 ~     author: &'a str,
   |

error[E0106]: missing lifetime specifier
  --> exercises/16_lifetimes/lifetimes3.rs:12:12
   |
12 |     title: &str,
   |            ^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
10 ~ struct Book<'a> {
11 |     author: &str,
12 ~     title: &'a str,
   |

error: aborting due to 2 previous errors

Ajout d'une durée de vie avec 'a
